--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/175_knn_query_hex_encoded_byte_vectors.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/175_knn_query_hex_encoded_byte_vectors.yml
@@ -75,12 +75,10 @@ setup:
 ---
 "Knn query with hex string for float field" :
   # [64, 10, -30] - is encoded as '400ae2'
-  # this will be properly decoded but only because:
-  # (i) the provided input is compatible as the values are within [Byte.MIN_VALUE, Byte.MAX_VALUE] range
-  # (ii) we do not differentiate between byte and float fields when initially parsing a query even for hex
-  # (iii) we support expansion from byte to float
+  # hex encoding is not supported for float fields
 
   - do:
+      catch: /failed to parse field \[query_vector\]/
       search:
         index: knn_hex_vector_index
         body:
@@ -90,9 +88,6 @@ setup:
               field: my_vector_float
               query_vector: "400ae2"
               num_candidates: 100
-
-  - match: { hits.total.value: 1 }
-  - match: { hits.hits.0._id: "4" }
 
 ---
 "Knn query with hex string for byte field" :
