Adds test capability checks for float vector encoding
Introduces conditional test requirements to ensure that float
query vectors in KNN search are only tested with base64 encoding
support, clarifying unsupported hex encoding scenarios and
improving test accuracy across different environments.

--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/170_knn_search_hex_encoded_byte_vectors.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/170_knn_search_hex_encoded_byte_vectors.yml
@@ -77,6 +77,14 @@ setup:
   # [64, 10, -30] - is encoded as '400ae2'
   # hex encoding is not supported for float fields
 
+  - requires:
+      test_runner_features: [ capabilities ]
+      capabilities:
+        - method: POST
+          path: /_search
+          capabilities: [ knn_query_vector_base64 ]
+      reason: "Float query vectors only support base64"
+
   - do:
       catch: /failed to parse field \[query_vector\]/
       search:
