--- a/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/esql/60_usage.yml
+++ b/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/esql/60_usage.yml
@@ -59,7 +59,7 @@ setup:
             - cosine_vector_similarity_function
             - inline_stats
             - promql_command_v0
-            - compound_output_eval
+            - uri_parts_command
       reason: "Test that should only be executed on snapshot versions"
 
   - do: { xpack.usage: { } }
